--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,15 @@
 #about {
    background:#eee;
 }
+
+#footer {
+   background: #273443;
+}
+
+.style-modal {
+   background-color: rgba(0,0,0,0.7);
+}
+
+.style-navbar {
+   margin-left: 130px;
+}
