Actualizo funcionalidad del Carrito

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,19 +1,9 @@
-// #root {
-//    background:#eee;
-// }
+// #root { background:#eee; }
 
-#about {
-   background:#eee;
-}
+#about { background:#eee; }
 
-#footer {
-   background: #273443;
-}
+#footer { background: #273443; }
 
-.style-modal {
-   background-color: rgba(0,0,0,0.7);
-}
+.style-modal { background-color: rgba(0,0,0,0.7); }
 
-.style-navbar {
-   margin-left: 130px;
-}
+.style-navbar { margin-left: 115px; }
