--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,10 @@
 .style-modal { background-color: rgba(0,0,0,0.7); }
 
 .style-navbar { margin-left: 115px; }
+
+#login {
+   background: url('https://images.unsplash.com/photo-1494879540385-bc170b0878a7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80'); 
+   background-size: cover;
+   background-position: top;
+   height: 100vh;
+}
