--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,29 @@
 // #root { background:#eee; }
 
+#login {
+   background-image: url('https://images.unsplash.com/photo-1494879540385-bc170b0878a7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80'); 
+   background-size: cover;
+   background-position: top;
+   min-height: 100vh;
+   
+}
+
+#contact {
+   background-image: url('https://images.pexels.com/photos/733853/pexels-photo-733853.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500'); 
+   background-size: cover;
+   background-position: top;
+   min-height: 100vh;
+
+   form {
+      width: 65%;
+   }
+   
+}
+
 #about { background:#eee; }
 
 #footer { background: #273443; }
 
 .style-modal { background-color: rgba(0,0,0,0.7); }
 
-.style-navbar { margin-left: 115px; }
-
-#login {
-   background: url('https://images.unsplash.com/photo-1494879540385-bc170b0878a7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80'); 
-   background-size: cover;
-   background-position: top;
-   height: 100vh;
-}
+.style-navbar { margin-left: 215px; }
