--- a/src/index.scss
+++ b/src/index.scss
@@ -1,33 +1,51 @@
-#root { background:#eee; }
+#root { 
+   background:#eee; 
+   min-height: 100vh;
+}
 
 #login, #register {
-   background-image: url('https://images.unsplash.com/photo-1494879540385-bc170b0878a7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80'); 
+   background-image: url(/images/login_register_bg.jpg); 
    background-size: cover;
    background-position: top;
    min-height: 100vh;  
 }
 
 #about {
-   background-image: linear-gradient(rgba(3, 10, 18, .65), rgba(1, 8 , 16, .60)), url('https://images.pexels.com/photos/1054665/pexels-photo-1054665.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940'); 
+   background-image: linear-gradient(rgba(3, 10, 18, .65), rgba(1, 8 , 16, .60)), url(/images/about_bg.jpg); 
    background-size: cover;
    background-position: bottom;
    color: white;
 }
 
 #contact {
-   background-image: url('https://images.pexels.com/photos/733853/pexels-photo-733853.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500'); 
+   background-image: url(/images/contact_bg.jpg); 
    background-size: cover;
    background-position: top;
    min-height: 100vh;
 
-   form {
-      width: 65%;
-   }   
+   form { width: 65%; } 
 }
 
-#footer {  background:#eee; }
+#footer {  
+   background: #222; 
+   border-top: 1px solid white;
+
+   a {   
+      display: inline-block;
+      margin: 0 10px;
+      width: 42px;
+      height: 42px;
+      border: solid 1px rgba(255, 255, 255, 0.1);
+      border-radius: 50%;
+      font-size: 18px;
+      line-height: 42px;
+      text-align: center;
+      color: #35a22c;
+      
+      transition: 0.3s;
+   }
+      
+   a:hover { border-color: #35a22c; }      
+}
 
 .style-modal { background-color: rgba(0,0,0,0.7); }
-
-
-
